--- a/assessment/sinatra/users/new.html
+++ b/assessment/sinatra/users/new.html
@@ -2,3 +2,8 @@
 
 <!-- Write out all of the appropriate html for a user who goes to the form to create a new user -->
 <!-- Imagine that a user both a name and a hometown -->
+<form action="user/:id" method="post">
+  <input type="text" name="name">
+  <input type="text" name="hometown">
+  <input type="submit" name="submit">
+</form>
