--- a/assessment/sinatra/users/new.html
+++ b/assessment/sinatra/users/new.html
@@ -2,3 +2,9 @@
 
 <!-- Write out all of the appropriate html for a user who goes to the form to create a new user -->
 <!-- Imagine that a user both a name and a hometown -->
+<form action="/users" method="POST">
+	<input type="text" name="user[name]" />
+	<input type="text" name="user[email]"/>
+	<input type="text" name="user[password]"/>	
+	<input type="submit" value="submit" />
+</form>
